<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context=".ui.view.dialogs.LanguageDialog"
    tools:viewBindingIgnore="true">

    <RadioGroup
        android:id="@+id/language_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface"
        android:padding="@dimen/margin_16">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/english"
            android:tag="en"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/amharic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amharic"
            android:tag="am"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/oromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oromo"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/tigregna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tigre"
            android:tag="tg"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/somali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/somali"
            android:tag="som"
            android:textColor="?android:textColorPrimary" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>