<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurface"
    android:padding="@dimen/margin_16"
    tools:context=".ui.view.dialogs.ConnectionErrorDialog">

    <ImageView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:src="@drawable/ic_report"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorPrimary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/msg_connection_error"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/connection"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/msg_not_connected"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/wifi_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/lbl_wifi"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/mobile_data"
        app:layout_constraintTop_toBottomOf="@id/msg" />

    <TextView
        android:id="@+id/mobile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/btn_data"
        android:textColor="?colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg" />
</androidx.constraintlayout.widget.ConstraintLayout>